# lowcode-example-generator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  monthly-package-refresh.yml
docs/: monthly-runbook.md  verifier-integration.md
docs/discovery/: cells-pilot-proof-report.md  current-state.md  example-reviewer-fixture-system.md  example-reviewer-integration-surface.md  implementation-gap-report.md  pipeline-module-integration-surface.md
docs/plans/: plugin-example-generation-execution-plan copy.md  plugin-example-generation-execution-plan.md
pipeline/configs/: github-publishing.yml  llm-routing.yml  plugin-namespace-patterns.yml  verifier.yml
pipeline/prompts/: example-generator.md  example-repair.md
pipeline/schemas/: api-catalog.schema.json  example-manifest.schema.json  family-config.schema.json  scenario-packet.schema.json  scenario.schema.json  validation-result.schema.json
scripts/: pilot_run.py
src/plugin_examples/: __init__.py  __main__.py  discovery_sweep.py  runner.py
templates/root-readme/: lowcode-family-readme.md.j2
tests/unit/: test_api_delta.py  test_aspose_links.py  test_cli_defaults.py  test_code_quality_sprint.py  test_dependency_resolver.py  test_example_miner.py  test_false_success_contracts.py  test_family_config.py  test_fixture_registry.py  test_fixture_strategy.py  test_gates.py  test_llm_generation.py  test_nuget_fetcher.py  test_nupkg_extractor.py  test_options_aware_sprint.py  test_partial_success_partitioning.py  test_plugin_detector.py  test_publishing.py  test_readme_renderer.py  (+6 more)
(+129 files in other folders)
